Updated pages with Pete's name.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>In memoriam FIRSTNAME LASTNAME</title>
+    <title>In memoriam Peter William Thompson</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     	    </button>
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html"><B>FIRSTNAME LASTNAME</B></a></li>
+                <li><a href="index.html"><B>Peter Thompson</B></a></li>
                 <li><a href="funeral.html">Funeral</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
@@ -54,13 +54,15 @@
 
       <div class="lovedone">
 
-        <img class="lovedone-image img-circle pull-right img-responsive" src="images/lovedone-circle.jpeg" alt="placeholder for the picture of your loved one.">
+        <img class="lovedone-image img-circle pull-right img-responsive" src="images/Pop_cropped.jpeg" alt="placeholder for the picture of your loved one.">
 
         <!-- Replace the placeholder image by removing the line above, and enabling the line below after uploading your own image. The ideal size is 512x512
 
         <img class="lovedone-image img-circle pull-right img-responsive" src="./images/lovedone.png"> -->
 
-        <h2 class="lovedone-heading">Bye name <span class="text-muted">mm.dd.yyyy</span></h2>
+        <h2 class="lovedone-heading">Peter William Thompson <span class="text-muted" style="font: size 35px;">12.11.1956 - 03.09.2024
+
+        </span></h2>
         <p class="lead">
             A warm heart<BR />
             for family and friends<BR />
