--- a/contact.html
+++ b/contact.html
@@ -16,21 +16,21 @@
     <link href="./assets/css/carousel.css" rel="stylesheet">
   </head>
   <!-- NAVBAR
-  ================================================== -->
-  <body>
+================================================== -->
+<body>
   <div class="navbar-wrapper">
     <div class="container">
 
       <div class="navbar navbar-inverse navbar-static-top">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index.html"><B>FIRSTNAME LASTNAME</B></a></li>
+              <li><a href="index.html"><B>Peter Thompson</B></a></li>
               <li><a href="funeral.html">Funeral</a></li>
               <li><a href="photos.html">Photos</a></li>
               <li><a href="condolences.html">Condolences</a></li>
