--- a/funeral.html
+++ b/funeral.html
@@ -24,14 +24,14 @@
 
         <div class="navbar navbar-inverse navbar-static-top">
           <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	    </button>
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html"><B>FIRSTNAME LASTNAME</B></a></li>
+                <li><a href="index.html"><B>Peter Thompson</B></a></li>
                 <li><a href="funeral.html">Funeral</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
@@ -43,6 +43,7 @@
 
       </div>
     </div>
+
 
     <!-- CENTRAL CONTAINER
     ================================================== -->
