--- a/condolences.html
+++ b/condolences.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>In memoriam FIRSTNAME LASTNAME</title>
+    <title>In memoriam Peter William Thompson</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
 
     <div class="jumbotron">
          <h2>Condolences</h2>
-          <p>Leave your condolences for the friends and family of FIRSTNAME.</p>
+          <p>Leave your condolences for the friends and family of Pete.</p>
       </div>
 
       <!-- customize labels of htmlcommentbox.com -->
