added details on thanksgiving service.

--- a/funeral.html
+++ b/funeral.html
@@ -32,7 +32,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
-                <li><a href="funeral.html">Funeral</a></li>
+                <li><a href="funeral.html">Thanksgiving</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -52,8 +52,27 @@
     <div class="container remember">
 
       <div class="jumbotron">
-         <h2>Funeral</h2>
-          <p>The funeral takes place the ... at ...</p>
+         <h2> Thanksgiving</h2>
+          <p>The Thanksgiving service will take place on <b> November 16<sup> th </sup> 2024 at 2PM</sup></b></p> 
+          <p> The service will be held at:</p>
+          <p></p><b> Greyfriars Church, Reading</b></p>
+          <p> Friar Street</p>
+          <p> Reading</p>
+          <p> RG1 1 EH </p>
+          <a> href="https://greyfriars.org.uk/" greyfriars.org.uk </a>
+
+          <p> After the service,
+            refreshments will be served in
+            the Foyer and Thames Suite
+            in the church Centre.</p>
+
+          <p>There are several car parks
+            close to the church. The
+            nearest car park is Q Park in
+            Chatham St. 
+            <a> href="https://www.q-park.co.uk/en-gb/" <www class="q-park co uk"></www> </a> </p>
+
+          <p> There is a coffee shop at the Church for those who arrive early.</p>
       </div>
       
     </div>
