--- a/photos.html
+++ b/photos.html
@@ -18,32 +18,31 @@
 
 <!-- NAVBAR
 ================================================== -->
-<body>
-  <div class="navbar-wrapper">
-    <div class="container">
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
 
-      <div class="navbar navbar-inverse navbar-static-top">
-        <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-          <div class="nav-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="index.html"><B>Peter Thompson</B></a></li>
-              <li><a href="funeral.html">Funeral</a></li>
-              <li><a href="photos.html">Photos</a></li>
-              <li><a href="condolences.html">Condolences</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+    	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	    </button>
+            <div class="nav-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="index.html"><B>Peter Thompson</B></a></li>
+                <li><a href="funeral.html">Thanksgiving</a></li>
+                <li><a href="photos.html">Photos</a></li>
+                <li><a href="condolences.html">Condolences</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
+
       </div>
-
     </div>
-  </div>
-
 
     <!-- CENTRAL CONTAINER
     ================================================== -->
