--- a/contact.html
+++ b/contact.html
@@ -6,42 +6,43 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>In memoriam Paula Spinoy</title>
+    <title>In memoriam Peter William Thompson</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./assets/css/bootstrap.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/css/bootstrap-glyphicons.css" rel="stylesheet">
     
-    <!-- Custom styles for this template -->
-    <link href="./assets/css/carousel.css" rel="stylesheet">
+    <!-- Remember template CSS -->
+    <link href="./assets/css/remember.css" rel="stylesheet">
   </head>
-  <!-- NAVBAR
-================================================== -->
-<body>
-  <div class="navbar-wrapper">
-    <div class="container">
 
-      <div class="navbar navbar-inverse navbar-static-top">
-        <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-          <div class="nav-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="index.html"><B>Peter Thompson</B></a></li>
-              <li><a href="funeral.html">Funeral</a></li>
-              <li><a href="photos.html">Photos</a></li>
-              <li><a href="condolences.html">Condolences</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <div class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+    	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	      <span class="icon-bar"></span>
+    	    </button>
+            <div class="nav-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="index.html"><B>Peter Thompson</B></a></li>
+                <li><a href="funeral.html">Thanksgiving</a></li>
+                <li><a href="photos.html">Photos</a></li>
+                <li><a href="condolences.html">Condolences</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
 
+      </div>
     </div>
-  </div>
 
 
    
