--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
-                <li><a href="funeral.html">Funeral</a></li>
+                <li><a href="funeral.html">Thanksgiving</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
                 <li><a href="contact.html">Contact</a></li>
