--- a/funeral.html
+++ b/funeral.html
@@ -69,8 +69,7 @@
           <p>There are several car parks
             close to the church. The
             nearest car park is Q Park in
-            Chatham St. 
-            <a> href="https://www.q-park.co.uk/en-gb/" <www class="q-park co uk"></www> </a> </p>
+            Chatham St. </p>
 
           <p> There is a coffee shop at the Church for those who arrive early.</p>
       </div>
