--- a/funeral.html
+++ b/funeral.html
@@ -59,7 +59,7 @@
           <p> Friar Street</p>
           <p> Reading</p>
           <p> RG1 1 EH </p>
-          <a> href="https://greyfriars.org.uk/" greyfriars.org.uk </a>
+          <a href="https://greyfriars.org.uk/"> greyfriars.org.uk </a>
 
           <p> After the service,
             refreshments will be served in
@@ -69,7 +69,7 @@
           <p>There are several car parks
             close to the church. The
             nearest car park is Q Park in
-            Chatham St. </p>
+            Chatham St. <a href="https://www.q-park.co.uk/en-gb/"> www.q-park.co.uk </a></p>
 
           <p> There is a coffee shop at the Church for those who arrive early.</p>
       </div>
