--- a/index.html
+++ b/index.html
@@ -60,14 +60,18 @@
 
         <img class="lovedone-image img-circle pull-right img-responsive" src="./images/lovedone.png"> -->
 
-        <h2 class="lovedone-heading">Peter William Thompson <span class="text-muted" style="font: size 35px;">12.11.1956 - 03.09.2024
+        <h2 class="lovedone-heading">Peter William Thompson <br />
+        <span class="text-muted" style="font: size 20px;"> 12.11.1956 - 03.09.2024 </span> </h2>
 
         </span></h2>
         <p class="lead">
-            A warm heart<BR />
-            for family and friends<BR />
-            we miss your love, support and limitless hospitality
+          I have fought the good fight, I have finished the course, I have kept the faith; 
+          in the future there is laid up for me the crown of righteousness, which the Lord, 
+          the righteous Judge, will award to me on that day; and not only to me, but also to 
+          all who have loved His appearing. <br />
+          2 Timothy 4:7-8
         </p>
+        
       </div>  
     </div>
 
