Added contact details and made small changes to index.

--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,10 @@
     <div class="container marketing">
 
 <div class="jumbotron">
-         <h2>Contact the familiy</h2>
-          <p>You can contact the family through <A HREF="mailto:family@family.Com">add email address here</A></p>
+         <h2>Contact details</h2>
+          <p> email: <A HREF="mailto:debbie.thompson265@gmail.com"> debbie.thompson265@gmail.com</A></p>
+          <p> Mobile: +447501595255</p>
+          <p> Address: 9 Grahame Avenue, Pangbourne, Reading, RG8 7LF</p>
       </div>
 
     <!-- Bootstrap core JavaScript
