--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 
         </span></h2>
         <p class="lead">
-          I have fought the good fight, I have finished the course, I have kept the faith; 
-          in the future there is laid up for me the crown of righteousness, which the Lord, 
-          the righteous Judge, will award to me on that day; and not only to me, but also to 
-          all who have loved His appearing. <br />
-          2 Timothy 4:7-8
+          I have fought the good fight, I have finished the course, I have kept the faith. 
+          <br />
+          2 Timothy 4:7
         </p>
         
       </div>  
