Updated all pages.

--- a/thanksgiving.html
+++ b/thanksgiving.html
@@ -32,10 +32,11 @@
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
-                <li><a href="funeral.html">Thanksgiving</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="message.html">Message</a></li>
+                <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gifts.html">Gifts</a></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </div>
           </div>
@@ -43,21 +44,36 @@
 
       </div>
     </div>
-
-
-   
-    <!-- Marketing messaging and featurettes
+    <!-- CENTRAL CONTAINER
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+    <div class="container remember">
 
-<div class="jumbotron">
-         <h2>Contact details</h2>
-          <p> email: <A HREF="mailto:debbie.thompson265@gmail.com"> debbie.thompson265@gmail.com</A></p>
-          <p> Mobile: +447501595255</p>
-          <p> Address: 9 Grahame Avenue, Pangbourne, Reading, RG8 7LF</p>
+      <div class="jumbotron">
+         <h2> Thanksgiving</h2>
+          <p>The Thanksgiving service will take place on: 
+            <br \> <b> November 16<sup> th </sup> 2024 at 1PM</sup></b></p> 
+          <p> The service will be held at:</p>
+          <p></p><b> <a href="https://greyfriars.org.uk/"> Greyfriars Church, Reading</a></b></p>
+          <p> Friar Street</p>
+          <p> Reading</p>
+          <p> RG1 1 EH </p>
+          
+
+          <p> After the service,
+            refreshments will be served in
+            the Foyer and Thames Suite
+            in the church Centre.</p>
+
+          <p>There are several car parks
+            close to the church. The
+            nearest car park is <a href="https://www.q-park.co.uk/en-gb/"> Q Park </a> in Chatham St.</p>
+
+          <p> There is a coffee shop at the Church for those who arrive early.</p>
       </div>
+      
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -66,6 +82,5 @@
     <script src="./assets/js/bootstrap.js"></script>
     <script src="./assets/js/holder.js"></script>
 
-  
   </body>
 </html>
