--- a/gifts.html
+++ b/gifts.html
@@ -32,10 +32,11 @@
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
-                <li><a href="funeral.html">Thanksgiving</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="message.html">Message</a></li>
+                <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gifts.html">Gifts</a></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </div>
           </div>
@@ -43,38 +44,29 @@
 
       </div>
     </div>
-
-
-    <!-- CENTRAL CONTAINER
+   
+    <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container remember">
+    <div class="container marketing">
 
-      <div class="jumbotron">
-         <h2> Thanksgiving</h2>
-          <p>The Thanksgiving service will take place on <b> November 16<sup> th </sup> 2024 at 2PM</sup></b></p> 
-          <p> The service will be held at:</p>
-          <p></p><b> Greyfriars Church, Reading</b></p>
-          <p> Friar Street</p>
-          <p> Reading</p>
-          <p> RG1 1 EH </p>
-          <a href="https://greyfriars.org.uk/"> greyfriars.org.uk </a>
+<div class="jumbotron">
+         <h2>Gifts in memory of Pete</h2>
+          <p> If you would like to make a contribution to a charity in memory of Pete, 
+            we suggest the following charities which work on causes that were close
+            to Pete's heart: </p>
+          <p> For a local charity based in Reading, FAITH welcomes refugees who are 
+            homeless at the Sanctuary Night shelter which will run this winter at 
+            Greyfriars church: <br/>
 
-          <p> After the service,
-            refreshments will be served in
-            the Foyer and Thames Suite
-            in the church Centre.</p>
+            <a href="https://peterwilliamthompson.muchloved.com/"> FAITH: Peter Thompson fundraising page</a> </p>
 
-          <p>There are several car parks
-            close to the church. The
-            nearest car park is Q Park in
-            Chatham St. <a href="https://www.q-park.co.uk/en-gb/"> www.q-park.co.uk </a></p>
-
-          <p> There is a coffee shop at the Church for those who arrive early.</p>
+          <p> For a charity working on projects worldwide, Project Possible Sparks project gives
+            women and young people in disadvantaged communities opportunities to support themselves: <br \>
+            <a href="https://pete-thompson.muchloved.com/"> Project Possible: Peter Thompson fundraising page </a>
+          </p>
       </div>
-      
-    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -83,5 +75,6 @@
     <script src="./assets/js/bootstrap.js"></script>
     <script src="./assets/js/holder.js"></script>
 
+  
   </body>
 </html>
