--- a/photos.html
+++ b/photos.html
@@ -32,10 +32,11 @@
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
-                <li><a href="funeral.html">Thanksgiving</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="message.html">Message</a></li>
+                <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gifts.html">Gifts</a></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +44,7 @@
 
       </div>
     </div>
-
+    
     <!-- CENTRAL CONTAINER
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
