--- a/photos.html
+++ b/photos.html
@@ -44,7 +44,7 @@
 
       </div>
     </div>
-    
+
     <!-- CENTRAL CONTAINER
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -70,7 +70,7 @@
 
     <div class="jumbotron">
        <h2>Photos</h2>
-        <p>This gallery automatically loads photographs that have been <a href="https://www.flickr.com/search/?q=firstnamelastname&m=tags&ss=0&ct=0&mt=all&w=all&adv=1">tagged on flickr with "FIRSTNAMELASTNAME"</a>. If you have only recently created your flickr account, it can take up to 48 hours before your photographs will show up here.</p>
+        <p>This gallery automatically loads photographs that have been <a href="https://www.flickr.com/search/?q=peterwilliamthompson&m=tags&ss=0&ct=0&mt=all&w=all&adv=1">tagged on flickr with "peterwilliamthompson"</a>. If you have only recently created your flickr account, it can take up to 48 hours before your photographs will show up here.</p>
     </div>
 
     <style type="text/css">
