Updated title and made small changes to content.

--- a/gifts.html
+++ b/gifts.html
@@ -35,8 +35,8 @@
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="gifts.html">Gifts</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="gifts.html">In Memory</a></li>
+                <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
             </div>
           </div>
@@ -44,7 +44,7 @@
 
       </div>
     </div>
-   
+
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -52,7 +52,7 @@
     <div class="container marketing">
 
 <div class="jumbotron">
-         <h2>Gifts in memory of Pete</h2>
+         <h2>In memory of Pete</h2>
           <p> If you would like to make a contribution to a charity in memory of Pete, 
             we suggest the following charities which work on causes that were close
             to Pete's heart: </p>
