--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="gifts.html">Gifts</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="gifts.html">In memory</a></li>
+                <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
             </div>
           </div>
