--- a/thanksgiving.html
+++ b/thanksgiving.html
@@ -35,8 +35,8 @@
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="gifts.html">Gifts</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="gifts.html">In Memory</a></li>
+                <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
             </div>
           </div>
@@ -55,10 +55,10 @@
           <p>The Thanksgiving service will take place on: 
             <br \> <b> November 16<sup> th </sup> 2024 at 1PM</sup></b></p> 
           <p> The service will be held at:</p>
-          <p></p><b> <a href="https://greyfriars.org.uk/"> Greyfriars Church, Reading</a></b></p>
-          <p> Friar Street</p>
-          <p> Reading</p>
-          <p> RG1 1 EH </p>
+          <p><b> <a href="https://greyfriars.org.uk/"> Greyfriars Church</a></b><br>
+              Friar Street <br>
+              Reading <br>
+              RG1 1 EH </p>
           
 
           <p> After the service,
