--- a/message.html
+++ b/message.html
@@ -35,8 +35,8 @@
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
                 <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="gifts.html">Gifts</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="gifts.html">In Memory</a></li>
+                <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
             </div>
           </div>
@@ -53,53 +53,55 @@
 
       <div class="jumbotron">
          <h2>Message</h2>
-          <p>I can still hardly believe I am writing this, and I am very sorry
-            to share the news that my beloved husband, and wonderful
-            father to Anna and Anthony, passed away suddenly on
-            Tuesday 3rd September towards the end of our recent visit to
-            Peru. </p>
+          <p>I can still hardly believe I am writing this, and I am 
+            very sorry to share the news that my dearly loved 
+            husband, and wonderful father to Anna and Anthony, 
+            passed away suddenly on Tuesday 3rd September towards 
+            the end of our recent visit to Peru.  </p>
 
-          <p>This summer we had the joy of attending a family wedding in
-            Poland (my nephew) and a family wedding in Canada. (his
-            nephew). This meant we had a special opportunity to spend
-            time with both sides of the family. </p>
+          <p>This summer we had the joy of attending a family 
+            wedding in Poland (my nephew) and a family wedding 
+            in Canada (Pete’s nephew). This meant we had a special 
+            opportunity to spend time with both sides of the family. </p>
 
-          <p>The trip to Canada enabled us to plan a follow-on two-week
-            trip to Peru during August. As many of you know Pete worked
-            in Peru in Christian faith based work and English teaching for
-            almost 14 years. This visit enabled us to reconnect with many
-            dear friends from those years, hearing many encouraging
-            updates on their journeys of life and faith. </p>
+          <p>The trip to Canada enabled us to plan a follow-on 
+            two-week trip to Peru. As many of you know Pete worked 
+            in Peru in Christian faith based work and English 
+            teaching for almost 14 years. This visit enabled us 
+            to reconnect with many dear friends from those years, 
+            hearing many encouraging updates on their journeys of 
+            life and faith.  </p>
 
-          <p>During the second week he developed health issues which
-            appeared to be minor. However, during the last couple of
-            days, he became much weaker and on admission to A&E was
-            found to have septicaemia, and this advanced very rapidly.
-            He was unable to be stabilized and to my great shock he died
-            by evening of the day he was admitted. The signs point to
-            him having had acute abdominal sepsis. </p>
+          <p>During the second week he developed health issues 
+            which appeared to be minor, however, during the last 
+            couple of days, he became much weaker and on admission 
+            to A&E was found to have septicaemia, and this advanced 
+            very rapidly and to my great shock he died by evening 
+            of the day he was admitted. There are indications that 
+            he suffered acute abdominal sepsis. </p>
 
           <p>Thankfully Anna and Anthony were able to join me in Peru
-            within two days. Although it was hard to be so far away from
-            family and friends in the UK, we were supported from afar
-            and helped and comforted by many dear friends locally. We
-            decided it would be fitting to hold the funeral and cremation
-            in Trujillo where he spent many happy and fulfilling years.
-            Many of Pete’s close friends, who respected him greatly,
-            attended with some taking part in the funeral and speaking of
-            how Pete had touched their lives. We have been able to bring
-            his ashes back to the UK. As you can imagine this has been a
-            devastating time. </p>
+             within two days. Although it was hard to be so far away 
+             from family and friends in the UK, we were supported 
+             from afar and helped and comforted by many dear friends 
+             locally. We decided it would be fitting to hold the 
+             funeral and cremation in Trujillo where he spent many 
+             happy and fulfilling years. Many of Pete’s close friends,
+              who respected him greatly, attended with some taking 
+              part in the funeral and speaking of how Pete had touched
+               their lives.  </p>
 
-          <p>We are now back in the UK and so grateful for many
-            messages of love and support. I am sorry that for some of
-            you this will be the first you have heard. Everything
-            happened so quickly. </p>
+          <p>We are now back in the UK and I am sorry that for some of 
+            you this will be the first you have heard. Everything happened 
+            so quickly. We are so grateful for many messages of love and 
+            support.  </p>
 
-          <p>Those who have heard have been asking about when and
-            how we will mark Pete’s passing. We have settled on holding
-            a thanksgiving service at Greyfriars Church where Pete was a
-            member for 40 years.</p>
+          <p>Those who have heard have been asking about when and how
+             we will mark Pete’s passing. We have settled on holding
+              a thanksgiving service at Greyfriars Church where Pete
+               was a member for 40 years. All are welcome. 
+               Come in whatever you feel comfortable in. </p>
+
           <p>We as a family send you our love, <br \>
             Debbie, Anna, Anthony</p>
       </div>
