--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
-                <li><a href="condolences.html">Condolences</a></li>
-                <li><a href="gifts.html">In memory</a></li>
+                <!-- <li><a href="condolences.html">Condolences</a></li> -->
+                <li><a href="gifts.html">In Memory</a></li>
                 <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
             </div>
