--- a/thanksgiving.html
+++ b/thanksgiving.html
@@ -34,7 +34,7 @@
                 <li><a href="index.html"><B>Peter Thompson</B></a></li>
                 <li><a href="message.html">Message</a></li>
                 <li><a href="thanksgiving.html">Thanksgiving</a></li>
-                <li><a href="condolences.html">Condolences</a></li>
+                <!-- <li><a href="condolences.html">Condolences</a></li> -->
                 <li><a href="gifts.html">In Memory</a></li>
                 <!-- <li><a href="photos.html">Photos</a></li> -->
               </ul>
